--- a/src/main/resources/assets/midnight/lang/ru_ru.json
+++ b/src/main/resources/assets/midnight/lang/ru_ru.json
@@ -433,7 +433,7 @@
   "item.midnight.tenebrum_chestplate": "Тенебриевая кираса",
   "item.midnight.tenebrum_leggings": "Тенебриевые поножи",
   "item.midnight.tenebrum_boots": "Тенебриевые ботинки",
-  "item.midnight.rockshroom_shear": "Ножницы из камнегриба",
+  "item.midnight.rockshroom_shears": "Ножницы из камнегриба",
   "item.midnight.rockshroom_bucket": "Ведро из камнегриба",
 
   "_comment": "Fluids",
@@ -465,56 +465,78 @@
 
   "_comment": "Config",
 
-  "config_cat.midnight.general": "Основные",
-  "config_cat.midnight.general.tooltip": "Все параметры, которые можно задать только на сервере.",
-  "config_cat.midnight.client": "Клиент",
-  "config_cat.midnight.client.tooltip": "Все параметры, которые могут задать игроки только на сервере.",
-
-  "config.midnight.midnight_dimension_id": "ID  Миднайта:",
-  "config.midnight.midnight_dimension_id.tooltip": "ID, которое будет использоваться для Измерения Миднайт",
-
-  "config.midnight.rift_shaders": "Шейдеры Разлома",
-  "config.midnight.rift_shaders.tooltip": "Если true, Разломы будут отрендерены с использованием пользовательских шейдеров для стандартных эффектов. Если false, то будет рендерится более простая текстура",
-
-  "config.midnight.bladeshroom_damage_chance": "Шанс урона от клинкогриба",
-  "config.midnight.bladeshroom_damage_chance.tooltip": "Шанс получения урона от подъёма клинкогриба. Если установлено значение \"0\", то урон не будет наносится",
-
-  "config.midnight.can_respawn_in_midnight": "Респаун игроков в Миднайте",
-  "config.midnight.can_respawn_in_midnight.tooltip": "Если установлено значение \"true\", игроки будут респавниться в Миднайте, если умрут в измерении.",
-
+  "config.midnight.title.client": "Конфигурации Midnight - Клиент",
+  "config.midnight.title.general": "Конфигурации Midnight - Основные",
+  "config.midnight.title.server_logic": "Конфигурации Midnight - Логика сервера",
+  "config.midnight.title.worldgen": "Конфигурации Midnight -Генерация мира",
+  
+  "config.midnight.header.graphical": "Графика",
+  "config.midnight.header.sound": "Звуки",
+  "config.midnight.header.rifters": "Разломщики",
+  "config.midnight.header.rifts": "Разломы",
+  "config.midnight.header.lightning": "Освещение",
+  "config.midnight.header.general": "Основные",
+  
+  "config.midnight.category.client": "Настройки клиента",
+  "config.midnight.category.client.tooltip": "Настройки, которые применяются только на клиенте и ничего не делают на стороне сервера.",
+  "config.midnight.category.compat": "Настройки совместимости",
+  "config.midnight.category.compat.tooltip": "Настройки того, как мод Midnight работает с другими модами и ванилла игрой.",
+  "config.midnight.category.server": "Настройки логики сервера",
+  "config.midnight.category.server.tooltip": "Настройки логики сервера. Может быть отредактировано для конкретного мира. Включено только при игре в мире.",
+  
+  
   "config.midnight.hide_vignette_effect": "Скрыть эффект виньетки",
   "config.midnight.hide_vignette_effect.tooltip": "Скрывает эффект виньетки в темных областях Миднайта.",
-
-  "config.midnight.allow_lightning_damage": "Разрешить урон от молнии",
-  "config.midnight.allow_lightning_damage.tooltip": "Позволят молниям в Миднайте поджигать блоки и наносить урон.",
-
-  "config.midnight.rift_spawn_rarity": "Редкость Разлома",
-  "config.midnight.rift_spawn_rarity.tooltip": "Частота появления разломов. Чем выше значение, тем чаще появляются разломы; значение \"0\" означает что Разломы, ведущие в Миднайт, появляться не будут.",
-
-  "config.midnight.rifter_spawn_rarity": "Редкость разломщиков",
-  "config.midnight.rifter_spawn_rarity.tooltip": "Частота появления разломщиков. Чем выше значение, тем чаще появляются разломщики; значение \"0\" означает что разломщики появляться не будут.",
-
-  "config.midnight.max_rifter_by_rift": "Максимальное количество рифтеров у Разломов",
-  "config.midnight.max_rifter_by_rift.tooltip": "Максимальное количество рифтеров, которые появляются из Разлома.",
-
-  "config.midnight.allow_rifter_teleport": "Телепортация рифтеров",
-  "config.midnight.allow_rifter_teleport.tooltip": "Позволяет рифтерам телепортироваться к игрокам, когда на них не смотрят игроки.",
-
-  "config.midnight.monster_spawn_rate": "Частота появления монстров",
-  "config.midnight.monster_spawn_rate.tooltip": "Частота появления враждебных существ в Миднайте (например Рифтер, Охотник и т.д).",
-
-  "config.midnight.rifter_capture_tamed_animal": "Захват прирученных животных",
-  "config.midnight.rifter_capture_tamed_animal.tooltip": "Позволятет рифтерам захватывать прирученных существ и кидать их в Разломы для перемещения в Миднайт.",
-
+  
+  "config.midnight.ambient_spore_particles": "Частицы спор",
+  "config.midnight.ambient_spore_particles.tooltip": "Определяет, появляются ли частицы спор вокруг.",
+  "config.midnight.ambient_volume": "Звук окружения",
+  "config.midnight.ambient_volume.tooltip": "Громкость звуков окружения Миднайт.",
+  "config.midnight.echo_volume": "Эффекты эха",
+  "config.midnight.echo_volume.tooltip": "Объем эффектов эха Миднайт.",
+  
+  "config.midnight.rift_biomes": "Биомы с Разломами",
+  "config.midnight.rift_biomes.tooltip": "В каких биомах могут возникать Разломы.",
+  "config.midnight.rift_dimensions": "Измерения с разломами",
+  "config.midnight.rift_dimensions.tooltip": "В каких измерениях могут возникать Разломы.",
   "config.midnight.capturable_entities": "Захваченные существа",
   "config.midnight.capturable_entities.tooltip": "Мобы, указанные в белом списке могут быть захвачены рифтерами, игроки и животные изначально могут быть захвачены.",
-
   "config.midnight.not_capturable_animals": "Не захватываемые существа",
   "config.midnight.not_capturable_animals.tooltip": "Мобы, указанные в чёрном списке не могут быть захвачены рифтерами.",
 
-  "config.midnight.foreign_flowers_from_bonemeal": "Цветы от костной муки",
-  "config.midnight.foreign_flowers_from_bonemeal.tooltip": "Позволяет цветам из других модов появляться в Миднайте при использовании костной муки.",
+  "config.midnight.bladeshroom_damage_chance": "Шанс урона от клинкогриба",
+  "config.midnight.bladeshroom_damage_chance.tooltip": "Шанс получения урона от подъёма клинкогриба. Если установлено значение \"0\", то урон не будет наносится",
+  "config.midnight.can_respawn_in_midnight": "Респаун игроков в Миднайте",
+  "config.midnight.can_respawn_in_midnight.tooltip": "Если установлено значение \"true\", игроки будут респавниться в Миднайте, если умрут в измерении.",
+  "config.midnight.hunters_attack_tamed_skulks": "Едят ли охотники приручённых крадущихся",
+  "config.midnight.hunters_attack_tamed_skulks.tooltip": "Устанавливает, нападают ли охотники на прирученных крадущихся.",
+  "config.midnight.rifts_from_dark_pearls": "Разломы тёмного жемчуга",
+  "config.midnight.rifts_from_dark_pearls.tooltip": "Устанавливает, образует ли темный жемчуг трещины разлома при щелчке правой кнопкой мыши.",
+  "config.midnight.rifts_open_at_daytime": "Разломы днём",
+  "config.midnight.rifts_open_at_daytime.tooltip": "Устанавливает, открыты ли Разломы всегда или только ночью.",
+  "config.midnight.allow_lightning_damage": "Разрешить урон от молнии",
+  "config.midnight.allow_lightning_damage.tooltip": "Позволят молниям в Миднайте поджигать блоки и наносить урон.",
+  "config.midnight.random_lightnings": "Случайные молнии",
+  "config.midnight.random_lightnings.tooltip": "Устанавливает, возникают ли случайные молнии в Миднайт.",
+  "config.midnight.rifter_spawn_rarity": "Редкость разломщиков",
+  "config.midnight.rifter_spawn_rarity.tooltip": "Частота появления разломщиков. Чем выше значение, тем чаще появляются разломщики; значение \"0\" означает что разломщики появляться не будут.",
+  "config.midnight.max_rifter_by_rift": "Максимальное количество рифтеров у Разломов",
+  "config.midnight.max_rifter_by_rift.tooltip": "Максимальное количество рифтеров, которые появляются из Разлома.",
+  "config.midnight.allow_rifter_teleport": "Телепортация рифтеров",
+  "config.midnight.allow_rifter_teleport.tooltip": "Позволяет рифтерам телепортироваться к игрокам, когда на них не смотрят игроки.",
+  "config.midnight.rifter_capture_tamed_animal": "Захват прирученных животных",
+  "config.midnight.rifter_capture_tamed_animal.tooltip": "Позволятет рифтерам захватывать прирученных существ.",
+  "config.midnight.rifter_capture_named_animal": "Захват именных животных",
+  "config.midnight.rifter_capture_named_animal.tooltip": "Позволятет рифтерам захватывать именных существ.",
+  
+  
+  
+  "config.midnight.format.always": "Всегда",
+  "config.midnight.format.never": "Никогда",
+  "config.midnight.format.entries": "%s записей",
 
+  "_comment": "Status",
+  
   "status.midnight.rift_nearby": "Вы не можете уснуть, ощущая злое присутствие рядом",
   "status.midnight.snapped": "Рыба набросилась на тебя",
 
