Fix config option for rifts open at daytime not working

--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -515,8 +515,8 @@
   "config.midnight.rifts_open_at_daytime": "Rifts At Daytime",
   "config.midnight.rifts_open_at_daytime.tooltip": "Sets whether rifts are always open or only at nighttime.",
   "config.midnight.allow_lightning_damage": "Lighting Damage",
-  "config.midnight.allow_lightning_damage.tooltip": "Sets whether Midnight lightnings burn blocks and damage entities.",
-  "config.midnight.random_lightnings": "Random Lightnings",
+  "config.midnight.allow_lightning_damage.tooltip": "Sets if Midnight lightning burn blocks and damage entities.",
+  "config.midnight.random_lightnings": "Random Lightning",
   "config.midnight.random_lightnings.tooltip": "Sets whether random lightning effects occur in the Midnight.",
   "config.midnight.natural_rifter_spawn_rarity": "Rift Spawning Rarity",
   "config.midnight.natural_rifter_spawn_rarity.tooltip": "The percent chance (from 0 to 100) for a rifter to spawn naturally. When 0, no rifters spawn at all.",
