Added JEI Integration for Nightstone Furnace
Yes, I know, the code in here is kinda straightforward. I'll find some way to automate this in the rewrite.

--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -619,6 +619,10 @@
   "tooltip.midnight.pressure_plate.heavy_weighted": "Heavy weighted",
   "tooltip.midnight.pressure_plate.light_weighted": "Light weighted",
 
+  "_comment": "GUIs",
+
+  "gui.midnight.category.smelting": "Midnight Smelting",
+
   "_comment": "Subtitles",
 
   "subtitles.ambient.midnight": "Eerie howling",
