--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -493,8 +493,8 @@
   "config.midnight.allow_brightness_change.tooltip": "Allows brightness to be changed in Midnight.",
   "config.midnight.ambient_spore_particles": "Spore Particles",
   "config.midnight.ambient_spore_particles.tooltip": "Determines whether ambient spore particles spawn.",
-  "config.midnight.experimental_capture_render": "Experimental Captured Entity Rendering",
-  "config.midnight.experimental_capture_render.tooltip": "Determines an entity captured by a rifter will be rendered as if it is being dragged.",
+  "config.midnight.experimental_capture_render": "Render Captured Entity",
+  "config.midnight.experimental_capture_render.tooltip": "Determines if an entity captured by a rifter will be rendered as if it is being dragged. This rendering is experimental and should be disabled if it causes problems.",
   "config.midnight.ambient_volume": "Ambience Volume",
   "config.midnight.ambient_volume.tooltip": "The volume of Midnight ambience sounds.",
   "config.midnight.echo_volume": "Echo Effect",
